# calendars

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  SECURITY.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  release.yml  test.yml
docs/: VERIFY.md  architecture.md  buddhist.ics  index.html  liuzhai.ics  shizhai.ics
scripts/: generate_ics.py
src/calendar_engine/: __init__.py  generator.py  registry.py
src/calendar_engine/calendars/: buddhist.py  liuzhai.py  shizhai.py  solar_terms.py
src/calendar_engine/core/: __init__.py  config.py  generator.py  registry.py
src/calendar_engine/types/: __init__.py
src/calendar_engine/utils/: __init__.py
src/liuzhai_ics/: __init__.py  config.py  generator.py  zhai_types.py
tests/: test_config.py  test_engine.py  test_generator.py  test_placeholder.py  test_registry.py  test_shizhai.py  test_zhai_types.py
