[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liuzhai-ics"
version = "1.0.0"
description = "六斋日 ICS 日历订阅 — 自动生成可订阅的 iPhone/iCal 六斋日日历"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "lunar-python>=1.4.0",
    "icalendar>=5.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
